crates/sparrow-arrow/src/avro/snapshots/sparrow_arrow__avro__schema__tests__nested_struct_to_avro.snap
---
source: crates/sparrow-arrow/src/avro/schema.rs
expression: "&avro_schema"
---
{
  "type": "record",
  "name": "",
  "fields": [
    {
      "name": "a",
      "type": [
        "null",
        "long"
      ]
    },
    {
      "name": "b",
      "type": "double"
    },
    {
      "name": "c",
      "type": [
        "null",
        "string"
      ]
    },
    {
      "name": "d",
      "type": {
        "type": "record",
        "name": "r1",
        "fields": [
          {
            "name": "a",
            "type": [
              "null",
              "long"
            ]
          },
          {
            "name": "b",
            "type": "double"
          }
        ]
      }
    }
  ]
}
