crates/sparrow-arrow/src/avro/snapshots/sparrow_arrow__avro__schema__tests__simple_struct_to_avro.snap
---
source: crates/sparrow-arrow/src/avro/schema.rs
expression: "&avro_schema"
---
{
  "type": "record",
  "name": "",
  "fields": [
    {
      "name": "a",
      "type": [
        "null",
        "long"
      ]
    },
    {
      "name": "b",
      "type": "double"
    },
    {
      "name": "c",
      "type": [
        "null",
        "string"
      ]
    }
  ]
}
